# kineasy

./: Cargo.toml  Readme.md
.circleci/: config.yml
src/: checkpoint.rs  lib.rs  shard.rs  stream.rs
test/: stream_integration_test.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
