[package]
name = "kineasy"
description = "Easy and performant crate for handling a kinesys stream"
version = "0.1.0"
edition = "2018"
keywords = ["kinesis", "stream", "futures", "performance", "rusoto"]
license = "MIT"
authors = ["Francisco López <donflopez@gmail.com>"]
repository = "https://github.com/donflopez/kineasy.git"
documentation = "https://docs.rs/kineasy"
readme = "README.md"


[dependencies]
rusoto = "0.24.2"
rusoto_core = "0.40.0"
rusoto_kinesis = "0.40.0"
rand = "0.7.0"
bytes = "0.4.12"
crossbeam = "0.7.2"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
tokio = "0.2.0-alpha.4"
past = { version = "0.1.28", package = "futures"}
futures-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"

[dev-dependencies]
native-tls = "0.2.3"
hyper-tls = "0.3.2"
dockers = "0.1.6"
chrono = "0.4.9"
kineasy_test_utils = "0.1.0"