[package]
name = "kineasy_test_utils"
description = "Test utils for kineasy"
license = "MIT"
version = "0.1.0"
authors = ["Francisco López <donflopez@gmail.com>"]
edition = "2018"

[dependencies]
rusoto = "0.24.2"
rusoto_core = "0.40.0"
rusoto_kinesis = "0.40.0"
rand = "0.7.0"
bytes = "0.4.12"
crossbeam = "0.7.2"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
tokio = "0.2.0-alpha.4"
past = { version = "0.1.28", package = "futures"}
futures-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
dockers = "0.1.6"
chrono = "0.4.9"